level_zero-sys/src/ze_api.rs

#[repr(transparent)]
#[doc = ""]
#[doc = " @brief Supported floating-Point capability flags"]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub struct _ze_device_fp_flags_t(pub u32);
#[doc = ""]
#[doc = " @brief Supported floating-Point capability flags"]
pub use self::_ze_device_fp_flags_t as ze_device_fp_flags_t;
#[doc = ""]
#[doc = " @brief Device module properties queried using ::zeDeviceGetModuleProperties"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _ze_device_module_properties_t {
    #[doc = "< [in] type of this structure"]
    pub stype: ze_structure_type_t,
    #[doc = "< [in,out][optional] pointer to extension-specific structure"]
    pub pNext: *mut ::std::os::raw::c_void,
    #[doc = "< [out] Maximum supported SPIR-V version."]
    #[doc = "< Returns zero if SPIR-V is not supported."]
    #[doc = "< Contains major and minor attributes, use ::ZE_MAJOR_VERSION and ::ZE_MINOR_VERSION."]
    pub spirvVersionSupported: u32,
    #[doc = "< [out] 0 or a valid combination of ::ze_device_module_flags_t"]
    pub flags: ze_device_module_flags_t,
    #[doc = "< [out] Capabilities for half-precision floating-point operations."]
    #[doc = "< returns 0 (if ::ZE_DEVICE_MODULE_FLAG_FP16 is not set) or a"]
    #[doc = "< combination of ::ze_device_fp_flags_t."]
    pub fp16flags: ze_device_fp_flags_t,
    #[doc = "< [out] Capabilities for single-precision floating-point operations."]
    #[doc = "< returns a combination of ::ze_device_fp_flags_t."]
    pub fp32flags: ze_device_fp_flags_t,
    #[doc = "< [out] Capabilities for double-precision floating-point operations."]
    #[doc = "< returns 0 (if ::ZE_DEVICE_MODULE_FLAG_FP64 is not set) or a"]
    #[doc = "< combination of ::ze_device_fp_flags_t."]
    pub fp64flags: ze_device_fp_flags_t,
    #[doc = "< [out] Maximum kernel argument size that is supported."]
    pub maxArgumentsSize: u32,
    #[doc = "< [out] Maximum size of internal buffer that holds output of printf"]
    #[doc = "< calls from kernel."]
    pub printfBufferSize: u32,
    #[doc = "< [out] Compatibility UUID of supported native kernel."]
    #[doc = "< UUID may or may not be the same across driver release, devices, or"]
    #[doc = "< operating systems."]
    #[doc = "< Application is responsible for ensuring UUID matches before creating"]
    #[doc = "< module using"]
    #[doc = "< previously created native kernel."]
    pub nativeKernelSupported: ze_native_kernel_uuid_t,
}
#[test]
fn bindgen_test_layout__ze_device_module_properties_t() {
    assert_eq!(
        ::std::mem::size_of::<_ze_device_module_properties_t>(),
        64usize,
        concat!("Size of: ", stringify!(_ze_device_module_properties_t))
    );
    assert_eq!(
        ::std::mem::align_of::<_ze_device_module_properties_t>(),
        8usize,
        concat!("Alignment of ", stringify!(_ze_device_module_properties_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_module_properties_t>())).stype as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_module_properties_t),
            "::",
            stringify!(stype)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_module_properties_t>())).pNext as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_module_properties_t),
            "::",
            stringify!(pNext)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_module_properties_t>())).spirvVersionSupported
                as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_module_properties_t),
            "::",
            stringify!(spirvVersionSupported)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_module_properties_t>())).flags as *const _ as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_module_properties_t),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_module_properties_t>())).fp16flags as *const _
                as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_module_properties_t),
            "::",
            stringify!(fp16flags)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_module_properties_t>())).fp32flags as *const _
                as usize
        },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_module_properties_t),
            "::",
            stringify!(fp32flags)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_module_properties_t>())).fp64flags as *const _
                as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_module_properties_t),
            "::",
            stringify!(fp64flags)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_module_properties_t>())).maxArgumentsSize as *const _
                as usize
        },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_module_properties_t),
            "::",
            stringify!(maxArgumentsSize)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_module_properties_t>())).printfBufferSize as *const _
                as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_module_properties_t),
            "::",
            stringify!(printfBufferSize)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_module_properties_t>())).nativeKernelSupported
                as *const _ as usize
        },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_module_properties_t),
            "::",
            stringify!(nativeKernelSupported)
        )
    );
}
extern "C" {
    #[doc = ""]
    #[doc = " @brief Retrieves module properties of the device"]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - The application may call this function from simultaneous threads."]
    #[doc = "     - The implementation of this function should be lock-free."]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hDevice`"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_POINTER"]
    #[doc = "         + `nullptr == pModuleProperties`"]
    pub fn zeDeviceGetModuleProperties(
        hDevice: ze_device_handle_t,
        pModuleProperties: *mut ze_device_module_properties_t,
    ) -> ze_result_t;
}
impl _ze_command_queue_group_property_flags_t {
    #[doc = "< Command queue group supports enqueing compute commands."]
    pub const ZE_COMMAND_QUEUE_GROUP_PROPERTY_FLAG_COMPUTE:
        _ze_command_queue_group_property_flags_t = _ze_command_queue_group_property_flags_t(1);
}
impl _ze_command_queue_group_property_flags_t {
    #[doc = "< Command queue group supports enqueing copy commands."]
    pub const ZE_COMMAND_QUEUE_GROUP_PROPERTY_FLAG_COPY: _ze_command_queue_group_property_flags_t =
        _ze_command_queue_group_property_flags_t(2);
}
impl _ze_command_queue_group_property_flags_t {
    #[doc = "< Command queue group supports cooperative kernels."]
    #[doc = "< See ::zeCommandListAppendLaunchCooperativeKernel for more details."]
    pub const ZE_COMMAND_QUEUE_GROUP_PROPERTY_FLAG_COOPERATIVE_KERNELS:
        _ze_command_queue_group_property_flags_t = _ze_command_queue_group_property_flags_t(4);
}
impl _ze_command_queue_group_property_flags_t {
    #[doc = "< Command queue groups supports metric streamers and queries."]
    pub const ZE_COMMAND_QUEUE_GROUP_PROPERTY_FLAG_METRICS:
        _ze_command_queue_group_property_flags_t = _ze_command_queue_group_property_flags_t(8);
}
impl _ze_command_queue_group_property_flags_t {
    pub const ZE_COMMAND_QUEUE_GROUP_PROPERTY_FLAG_FORCE_UINT32:
        _ze_command_queue_group_property_flags_t =
        _ze_command_queue_group_property_flags_t(2147483647);
}
impl ::std::ops::BitOr<_ze_command_queue_group_property_flags_t>
    for _ze_command_queue_group_property_flags_t
{
    type Output = Self;
    #[inline]
    fn bitor(self, other: Self) -> Self {
        _ze_command_queue_group_property_flags_t(self.0 | other.0)
    }
}
impl ::std::ops::BitOrAssign for _ze_command_queue_group_property_flags_t {
    #[inline]
    fn bitor_assign(&mut self, rhs: _ze_command_queue_group_property_flags_t) {
        self.0 |= rhs.0;
    }
}
impl ::std::ops::BitAnd<_ze_command_queue_group_property_flags_t>
    for _ze_command_queue_group_property_flags_t
{
    type Output = Self;
    #[inline]
    fn bitand(self, other: Self) -> Self {
        _ze_command_queue_group_property_flags_t(self.0 & other.0)
    }
}
impl ::std::ops::BitAndAssign for _ze_command_queue_group_property_flags_t {
    #[inline]
    fn bitand_assign(&mut self, rhs: _ze_command_queue_group_property_flags_t) {
        self.0 &= rhs.0;
    }
}
#[repr(transparent)]
#[doc = ""]
#[doc = " @brief Supported command queue group property flags"]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub struct _ze_command_queue_group_property_flags_t(pub u32);
#[doc = ""]
#[doc = " @brief Supported command queue group property flags"]
pub use self::_ze_command_queue_group_property_flags_t as ze_command_queue_group_property_flags_t;
#[doc = ""]
#[doc = " @brief Command queue group properties queried using"]
#[doc = "        ::zeDeviceGetCommandQueueGroupProperties"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _ze_command_queue_group_properties_t {
    #[doc = "< [in] type of this structure"]
    pub stype: ze_structure_type_t,
    #[doc = "< [in,out][optional] pointer to extension-specific structure"]
    pub pNext: *mut ::std::os::raw::c_void,
    #[doc = "< [out] 0 (none) or a valid combination of"]
    #[doc = "< ::ze_command_queue_group_property_flags_t"]
    pub flags: ze_command_queue_group_property_flags_t,
    #[doc = "< [out] maximum `pattern_size` supported by command queue group."]
    #[doc = "< See ::zeCommandListAppendMemoryFill for more details."]
    pub maxMemoryFillPatternSize: usize,
    #[doc = "< [out] the number of physical command queues within the group."]
    pub numQueues: u32,
}
